release: v0.1.3 - Mobile file browsing & downloading fix, virtual trackpad & remote, clipboard sync, clean settings
